# research-crawler-backend

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: aws.yml
docs/crawl4ai/: 1 getting started - crawl4ai documentation.md  10 user simulation - crawl4ai documentation.md  111 json css - crawl4ai documentation.md  112 llm strategy - crawl4ai documentation.md  113 cosine strategy - crawl4ai documentation.md  12 session crawling - crawl4ai documentation.md  13 text chunking - crawl4ai documentation.md  14 custom workflows - crawl4ai documentation.md  2 advanced features - crawl4ai documentation.md  3 browser setup - crawl4ai documentation.md  4 proxy settings - crawl4ai documentation.md  5 dynamic content - crawl4ai documentation.md  6 magic mode - crawl4ai documentation.md  7 content cleaning - crawl4ai documentation.md  8 media handling - crawl4ai documentation.md  9 link analysis - crawl4ai documentation.md  asyncwebcrawler - crawl4ai documentation.md  asyncwebcrawlerarun - crawl4ai documentation.md  browser configuration - crawl4ai documentation.md  chunking - crawl4ai documentation.md  content processing - crawl4ai documentation.md  content selection - crawl4ai documentation.md  cosine strategy - crawl4ai documentation.md  crawlresult - crawl4ai documentation.md  docker deployment - crawl4ai documentation.md  home - crawl4ai documentation.md  hooks  auth - crawl4ai documentation.md  installation - crawl4ai documentation.md  json-css extractor advanced - crawl4ai documentation.md  (+13 more)
static/: index.html
